--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.7",
+    "@clerk/nextjs": "^4.31.3",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -23,7 +23,7 @@
     "lucide-react": "^0.336.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
-    "next": "14.1.0",
+    "next": "^14.2.4",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
